Added if statements with gotos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div>
                 <button id="process" class="btn btn-primary">Process</button>
                 <button id="run" class="btn btn-secondary" disabled>Run</button>
-                <button class="btn btn-danger">Clear</button>
+                <button id="clear" class="btn btn-danger">Clear</button>
             </div>
         </div>
         <div class="float-start me-3 p-3 card">
